--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,2 +1,5 @@
 @import './settings.css';
 @import './header.css';
+@import './clientsSection.css';
+@import './modal.css';
+@import './contact.css';
